# datadog-api-rs

./: .gitignore  README.md
src/: Cargo.toml
src/datadog-api/: Cargo.toml
src/datadog-api/src/: client.rs  lib.rs
src/datadog-api/src/authentication/: mod.rs
src/datadog-api/src/dashboard_lists/: mod.rs
src/datadog-api/src/dashboards/: mod.rs  widgets.rs
src/datadog-api/src/logs/: mod.rs
src/datadog-api/src/monitors/: mod.rs
src/datadog-api/src/security_monitoring/: mod.rs
src/datadog-api/tests/: authentication.rs  dashboard_lists.rs  dashboards.rs  logs.rs  monitors.rs  security_monitoring.rs
